[package]
name = "binance_signal_app"
version = "0.1.0"
edition = "2024"

[dependencies]

# --- Dependencies for async & web ---
[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "multipart", "gzip", "stream", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-tungstenite = "0.21"
url = "2"
open = "5"
