[package]
name = "binance_signal_app"
version = "0.1.0"
edition = "2024"

# --- Dependencies for async & web ---
[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

